adjusted the background colors on the collapsables on sushi

--- a/seaFood/css/sauces/gallery.css
+++ b/seaFood/css/sauces/gallery.css
@@ -144,6 +144,7 @@ img {vertical-align: middle;}
   justify-content: center;
   background-position: center;
   padding-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .octopusPicture1-4 {
@@ -156,6 +157,7 @@ img {vertical-align: middle;}
   justify-content: center;
   background-position: center;
   padding-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .octopusPicture1-5 {
@@ -168,6 +170,7 @@ img {vertical-align: middle;}
   justify-content: center;
   background-position: center;
   padding-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .octopusPicture1-6 {
@@ -180,6 +183,7 @@ img {vertical-align: middle;}
   justify-content: center;
   background-position: center;
   padding-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .octoPic1 {
@@ -379,6 +383,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/shrimp/CrosseNBlackwell.png");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic3-2 {
@@ -401,6 +406,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/shrimp/stone.png");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic3-4 {
@@ -423,6 +429,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/shrimp/Frisch.jpg");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic3-6 {
@@ -445,6 +452,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/shrimp/SweetBaby.jpg");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic3-8 {
@@ -467,6 +475,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/shrimp/THUMB.jpg");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic4 {
@@ -478,6 +487,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/lobster/ClassicThermidor.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic4-2 {
@@ -500,6 +510,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/lobster/shallot.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic4-4 {
@@ -522,6 +533,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/lobster/asianSpices.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic4-6 {
@@ -544,6 +556,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/lobster/random.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 
@@ -559,6 +572,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/octopus/chili.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic5-2 {
@@ -581,6 +595,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/octopus/BlackBean.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic5-4 {
@@ -603,6 +618,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/octopus/Kewpiesauce.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic5-6 {
@@ -625,6 +641,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/squid/romesco.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic6-2 {
@@ -647,6 +664,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/squid/garlicLemon.jpg");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic6-4 {
@@ -669,6 +687,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/squid/LemonBasil.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic6-6 {
@@ -691,6 +710,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/squid/smokedChipotle.JPG");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic6-8 {
@@ -713,6 +733,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/squid/redSauce.jpg");
   justify-content: center;
   background-position: center;
+  background-color: #ffff;
 }
 
 .octoPic6-10 {
