changed sidemenu png and subhero images and newsletter background

--- a/seaFood/css/crabs/main.css
+++ b/seaFood/css/crabs/main.css
@@ -145,6 +145,15 @@
     background-color: #f1f1f1;
   }
 
+  .divider {
+    display: flex;
+    width: 100vw;
+    height: auto;
+    background-color: rgb(4, 122, 219);
+    padding-top: 30px;
+    margin-top: 30px;
+}
+
   .crab1{
     display: flex;
     position: relative;
@@ -171,7 +180,6 @@
     height: auto;
     width: 100vw;
     background-color: #ffffff;
-    padding-bottom: 30px;
     margin-top: 40px;
 }
 
@@ -184,16 +192,20 @@
     width: 100vw;
     background-color: rgb(4, 122, 219);
     padding-top: 30px;
+    background-image: url("../../Assets/images/crab/cwide2.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center top;
 }
 
 /* ----------------------------form---------------------------- */
 .container {
-    display: flex;
-    padding-top: 40px;
-    padding: 20px;
-    background-color: #f1f1f1;
-    justify-content: center;
-    flex-wrap:wrap;
+  display: flex;
+  padding-top: 40px;
+  padding: 20px;
+  background-color: #f1f1f12a;
+  justify-content: center;
+  flex-wrap:wrap;
   }
 
 
@@ -215,8 +227,12 @@
   }
   
   .container h2 {
-      font-size: 18px;
-  }
+    font-size: 22px;
+    color: #181717;
+    font-weight: lighter;
+    background-color: rgba(240, 255, 255, 0.719);
+    padding: 20px;
+    }
 
   .container h3 {
     height: auto;
