--- a/seaFood/css/lobster/main.css
+++ b/seaFood/css/lobster/main.css
@@ -190,14 +190,20 @@
     height: auto;
 }
   /* -------------------------------------- */
-
+  .divider {
+    display: flex;
+    width: 100vw;
+    height: auto;
+    background-color: rgb(4, 122, 219);
+    padding-top: 30px;
+    margin-top: 30px;
+}
 
 .content {
     grid-area: content;
     height: auto;
     width: 100vw;
     background-color: #ffffff;
-    padding-bottom: 30px;
     margin-top: 40px;
 }
 
@@ -209,7 +215,10 @@
     height: auto;
     width: 100vw;
     background-color: rgb(4, 122, 219);
-    padding-top: 30px;
+    background-image: url("../../Assets/images/lobster/bg1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 /* ----------------------------form---------------------------- */
@@ -220,6 +229,7 @@
     background-color: #f1f1f1;
     justify-content: center;
     flex-wrap:wrap;
+    background-color: #f1f1f12a;
   }
 
 
@@ -241,8 +251,12 @@
   }
   
   .container h2 {
-      font-size: 18px;
-  }
+    font-size: 22px;
+    color: #181717;
+    font-weight: lighter;
+    background-color: rgba(240, 255, 255, 0.719);
+    padding: 20px;
+    }
 
   .container h3 {
     height: auto;
