--- a/seaFood/css/pairingList/main.css
+++ b/seaFood/css/pairingList/main.css
@@ -116,11 +116,18 @@
     height: auto;
     width: 100vw;
     background-color: #ffffff;
-    padding-bottom: 30px;
+    margin-top: 40px;
 }
 
 
-
+.divider {
+  display: flex;
+  width: 100vw;
+  height: auto;
+  background-color: rgb(4, 122, 219);
+  padding-top: 30px;
+  margin-top: 30px;
+}
 
 .newsLetter {
     grid-area: newsLetter;
@@ -128,17 +135,21 @@
     width: 100vw;
     background-color: rgb(4, 122, 219);
     padding-top: 30px;
+    background-image: url("../../Assets/images/side/bg.jfif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center bottom;
 }
 
 /* ----------------------------form---------------------------- */
 .container {
-    display: flex;
-    padding-top: 40px;
-    padding: 20px;
-    background-color: #f1f1f1;
-    justify-content: center;
-    flex-wrap:wrap;
-  }
+  display: flex;
+  padding-top: 40px;
+  padding: 20px;
+  justify-content: center;
+  flex-wrap:wrap;
+  background-color: #f1f1f12a;
+}
 
 
  .form {
@@ -159,8 +170,12 @@
   }
   
   .container h2 {
-      font-size: 18px;
-  }
+    font-size: 22px;
+    color: #181717;
+    font-weight: lighter;
+    background-color: rgba(240, 255, 255, 0.719);
+    padding: 20px;
+    }  
 
   .container h3 {
     height: auto;
