--- a/seaFood/css/shrimp/header.css
+++ b/seaFood/css/shrimp/header.css
@@ -1,4 +1,4 @@
-.shrimp1 h1 {
+.content h1 {
     display: flex;
     font-size: 22px;
     justify-content: center;
@@ -73,6 +73,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType2 p {
@@ -107,6 +108,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType3 p {
@@ -140,6 +142,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType4 p {
@@ -174,6 +177,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType5 p {
@@ -207,6 +211,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType6 p {
@@ -241,6 +246,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType7 p {
@@ -274,6 +280,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType8 p {
@@ -308,6 +315,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType9 p {
@@ -341,6 +349,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType10 p {
@@ -375,6 +384,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType11 p {
@@ -408,6 +418,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType12 p {
@@ -442,6 +453,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType13 p {
@@ -475,6 +487,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType14 p {
@@ -509,6 +522,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType15 p {
@@ -542,6 +556,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType16 p {
@@ -576,6 +591,7 @@
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
+        padding-bottom: 25px;
     }
     
     .shrimpType17 p {
