--- a/seaFood/css/sushi/main.css
+++ b/seaFood/css/sushi/main.css
@@ -167,14 +167,20 @@
 
 
   /* -------------------------------------- */
-
+  .divider {
+    display: flex;
+    width: 100vw;
+    height: auto;
+    background-color: rgb(4, 122, 219);
+    padding-top: 30px;
+    margin-top: 30px;
+}
 
 .content {
     grid-area: content;
     height: auto;
     width: 100vw;
     background-color: #ffffff;
-    padding-bottom: 30px;
     margin-top: 40px;
 }
 
@@ -187,6 +193,10 @@
     width: 100vw;
     background-color: rgb(4, 122, 219);
     padding-top: 30px;
+    background-image: url("../../Assets/images/sushi/bg1.jfif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 /* ----------------------------form---------------------------- */
@@ -194,7 +204,7 @@
     display: flex;
     padding-top: 40px;
     padding: 20px;
-    background-color: #f1f1f1;
+    background-color: #f1f1f12a;
     justify-content: center;
     flex-wrap:wrap;
   }
@@ -218,8 +228,12 @@
   }
   
   .container h2 {
-      font-size: 18px;
-  }
+    font-size: 22px;
+    color: #181717;
+    font-weight: lighter;
+    background-color: rgba(240, 255, 255, 0.719);
+    padding: 20px;
+    }
 
   .container h3 {
     height: auto;
