--- a/seaFood/css/crabs/footer.css
+++ b/seaFood/css/crabs/footer.css
@@ -25,7 +25,7 @@
 .fish2 {
     width: 200px;
     height: 100%;
-    background-image: url("../../assets/images/fish.png");
+    background-image: url("../../assets/images/crabVec.png");
     background-repeat: no-repeat;
     background-size: 55%;
     background-position: center;
