--- a/seaFood/css/crabs/gallery.css
+++ b/seaFood/css/crabs/gallery.css
@@ -11,21 +11,13 @@
     align-items: flex-end;
 }
 
-/* ---------------------- slideshow---------------------------- */
+/* -------------------------------------------------- */
 
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-}
 
 /* Caption text */
 .text {
@@ -38,76 +30,6 @@ img {vertical-align: middle;}
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-.mySlidesfade img {
-    height: 300px;
-    width: auto;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
-}
-
-/* ---------------------- slideshow end---------------------------- */
-.mapContainer {
-  display: flex;
-  position: relative;
-  justify-content: center;
-  padding-top: 20px;
-}
-
-#map {
-  display: flex;
-  height: 400px;
-  /* The height is 400 pixels */
-  width: 75%;
-  /* The width is the width of the web page */
-  justify-content: center;
-}
-
-/* ------------------------------------- */
 
 .crabPicture1 {
   position: relative;
@@ -118,6 +40,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/crab/ppp.jfif");
   justify-content: center;
   background-position: center;
+  margin-bottom: 25px;
 }
 
 .crabPic1 {
