--- a/seaFood/css/squid/main.css
+++ b/seaFood/css/squid/main.css
@@ -196,6 +196,14 @@
     height: auto;
 }
 
+.divider {
+  display: flex;
+  width: 100vw;
+  height: auto;
+  background-color: rgb(4, 122, 219);
+  padding-top: 30px;
+  margin-top: 30px;
+}
 
   /* -------------------------------------- */
 
@@ -205,7 +213,6 @@
     height: auto;
     width: 100vw;
     background-color: #ffffff;
-    padding-bottom: 30px;
     margin-top: 40px;
 }
 
@@ -218,6 +225,10 @@
     width: 100vw;
     background-color: rgb(4, 122, 219);
     padding-top: 30px;
+    background-image: url("../../Assets/images/squid/bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
 }
 
 /* ----------------------------form---------------------------- */
@@ -225,7 +236,7 @@
     display: flex;
     padding-top: 40px;
     padding: 20px;
-    background-color: #f1f1f1;
+    background-color: #f1f1f12a;
     justify-content: center;
     flex-wrap:wrap;
   }
@@ -249,8 +260,12 @@
   }
   
   .container h2 {
-      font-size: 18px;
-  }
+    font-size: 22px;
+    color: #181717;
+    font-weight: lighter;
+    background-color: rgba(240, 255, 255, 0.719);
+    padding: 20px;
+    }
 
   .container h3 {
     height: auto;
